package com.zseni.noteapp_compose.core.util

object TestTag {
    const val ORDER_SECTION = "ORDER_SECTION"
    const val TITLE_TEXT_FIELD = "ORDER_SECTION"
    const val CONTENT_TEXT_FIELD = "ORDER_SECTION"
    const val NOTE_ITEM = "NOTE_ITEM"

}