...
                },
                backgroundColor = MaterialTheme.colors.primary
            ) {
                Icon(
                    modifier = Modifier.size(50.dp),
                    imageVector = Icons.Default.ArrowRight,
                    contentDescription = "Add note",
                    tint = MaterialTheme.colors.background)
            }
        },
        scaffoldState = scaffoldState,
    ) {

...
