...
                onClick = {
                    viewModel.onEvent(AddEditNoteEvent.SaveNote)
                 },
                backgroundColor = MaterialTheme.colors.primary
            ){
                Icon(imageVector = Icons.Filled.SaveAlt,
                    contentDescription = "Save note")
            }

        },
        scaffoldState = scaffoldState
    ) {
        Column(
...
